[tool.poetry]
name = "gitstats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "7.2.0"
python-dateutil = "^2.8.2"
pandas = "^1.5.1"
plotly = "^5.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
